[package]
name = "levy"
version = "0.1.1"
authors = ["mayendradwika <mayendradwikaprayudha@gmail.com>"]
edition = "2021"
description = "Simple CLI to Basic Fitur"
repository = "https://github.com/mayendra/levy"
license = "MIT"
keywords = ["cli","utillity","converter"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.0", features = ["derive"] }
rand = "0.9.0"

[[bin]]
name ="levy"
path = "src/main.rs"